# mcp-docx-reader

./: .gitignore  BUGFIX.md  README.md  mcp_docx_reader.py  pyproject.toml
