[project]
name = "mcp_docx_reader"
version = "0.1.0"
description = "An MCP enabled DOCX reader"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["python-docx", "mcp"]

[project.scripts]
mcp_docx_reader = "mcp_docx_reader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["mcp_docx_reader.py"]